UIDevTools: Fix regression on Windows

Recent commit 13fc02f broke Windows build because the compiler on
Windows uses different ABIs than those on Linux. The change caused
the UI devtools server failed to be created so no connection could
be made. This CL fixes the calling, and added a unit test to
prevent future brokerage.

BUG=903987

Change-Id: Ie8c0201ab817482b9e7d6eaf305ff0620dff3540
Reviewed-on: https://chromium-review.googlesource.com/c/1336446
Reviewed-by: Leonard Grey <lgrey@chromium.org>
Reviewed-by: Reilly Grant <reillyg@chromium.org>
Reviewed-by: Cait Phillips <caitkp@chromium.org>
Commit-Queue: Wei Li <weili@chromium.org>
Cr-Commit-Position: refs/heads/master@{#608913}
Former-commit-id: b55d1dd98485af25d703d0c409f7972c4161d528